--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>List</h1>
+    <h1>MoonList</h1>
     <div class="input div">
         <input id='addInput' type="text" placeholder="Що ви хочете сьогодні робити?">
         <button id='addButton'>Додати</button>
